css/foundry.css
/* ... */
.roll-message-body .roll-information-row .value {
    background: unset;
}

.dice-roll .dice-formula, .dice-roll .dice-total {
    background: var(--color-bg-light);
}

section.secret {
    background: var(--color-bg-light);
}

li.roll-characteristic.active.positive {
    font-family: var(--font-label), sans-serif;
    color: var(--color-level-success-border);
}

li.roll-characteristic.active.negative {
    font-family: var(--font-label), sans-serif;
    color: var(--color-warm-2);
}

.dice-tooltip .part-header .part-formula,
.formula p.label,
.roll-characteristic-card p.label,
.roll-combat-card p.label,
.dice-tooltip .part-header .part-total {
    font-weight: unset;
}

.dice-roll .dice-total, .treasure-header {
    font-size: var(--font-size-12);
    color: var(--color-text-dark-header);
}

.roll-message-body .roll-information-row .label, .formula p.label,
.roll-characteristic-card p.label, .roll-combat-card p.label,
.damage-card .block-title, .warn-card .block-title,
.message-content .song-result-message .song-result-message-body .song-attribute-row .label {
    background: var(--color-text-dark-header);
    font-family: var(--font-label), sans-serif;
}

.damage-card .block-title, .warn-card .block-title, .damage-card a {
    font-family: var(--font-label), sans-serif;
}

.damage-card .block-content a, .warn-card .block-content a {
    background: var(--color-bg-light);
}

.dice-result .dice-formula, .dice-result .dice-total {
    border: none;
    cursor: pointer
}

.display-description-message .display-description-message-header .summary .block .title {
    background: var(--color-text-dark-header);
    font-family: var(--font-label), sans-serif;
}

.display-description-message .display-description-message-header .summary .block .value {
    padding-left: 0.2em;
    background: var(--color-bg-light);
    text-align: center;
}

.message-content .song-result-message .song-result-message-body .song-attribute-row .value {
    align-content: center;
}

.display-description-message .display-description-message-body {
    background: var(--color-bg-light);
    border: unset;
}


/* Journal */

.journal-sheet .journal-header {
    margin-top: 0.4rem;
    margin-bottom: 0.2rem;
}

.journal-sheet p {
    line-height: 1.2;
}

.journal-sheet p:empty {
    min-height: 0.5rem;
}

.journal-sheet :is(h1, h2, h3, h4, h5, h6) {
    border-bottom: none;
}

.journal-sheet .window-content {
    background: var(--color-light-1) url(../img/tor_bg.webp) no-repeat;
    background-size: cover;
}

.journal-sheet h1 {
    font-size: var(--font-h1-size);
}

.journal-page-content h3 {
    font-family: NewBaskervilleBold, sans-serif;
    text-transform: uppercase;
    letter-spacing: 0.1em;
}

.journal-sidebar h1 {
    color: var(--color-warm-2);
}

.sheet.journal-entry .pages-list .page-heading,
.sheet.journal-entry .pages-list .heading-link{
    font-size: var(--font-body-size);
}

.journal-page-content h1, .journal-page-content h3, .journal-page-content h5,
.journal-page-header h1, .journal-page-header h3, .journal-page-header h5, .page-heading,
.journal-header .title {
    color: var(--color-text-dark-header);
}

.journal-page-content h2, .journal-page-content h4, .journal-page-content h6,
.journal-page-header h2, .journal-page-header h4, .journal-page-header h6{
    color: var(--color-warm-2);
}

.journal-sheet .journal-header .title {
    background: none;
    border: none;
    font-family: var(--font-h1), sans-serif;
    font-size: var(--font-size-18);
}

.sheet.journal-entry .journal-entry-content {
    flex: 1;
    height: 100%;
    background: var(--color-light-1) url(../img/tor_bg.webp) no-repeat;
    background-size: cover;
    border: 2px solid var(--color-border-dark);
    border-radius: 6px 0 0 0;
    font-size: var(--font-body-size);
    text-align: justify;
}

.journal-sheet .pages-list > * {
    font-size: var(--font-size-15);
}

.sheet.journal-entry .journal-sidebar {
    background: var(--color-light-1) url(../img/tor_bg.webp) no-repeat;
    background-size: cover;
    color: var(--color-text-dark-primary);
    border-radius: 5px;
    padding: 5px;
    margin: 2px;
    font-family: var(--font-label), sans-serif;
    /*font-weight: unset;*/
}

.sheet.journal-entry .journal-sidebar input {
    font-family: var(--font-body), sans-serif;
}

.journal-entry-content .journal-entry-pages {
    padding-left: 3px
}

.journal-entry-content .journal-entry-pages img {
    border: none
}

.sheet.journal-entry .pages-list .directory-item {
    border-bottom: none;
}

.sheet.journal-entry .pages-list .page-heading .page-title:hover {
    cursor: pointer;
    color: var(--color-warm-2);
    text-shadow: none
}

.journal-page-content pre {
    white-space: unset;
}

pre {
    font-family: var(--font-monospace), sans-serif;
}

.editor-content * {
    text-align: justify;
}

.sheet-container .editor-content blockquote,
.editor-container .editor-content blockquote,
.journal-sheet blockquote {
    position: relative;
    font-family: var(--font-blockquote), sans-serif;
    font-style: unset;
    color: var(--color-text-dark-blockquote);
    margin: 0;
    border-left: 0;
    border-right: 0;
    padding: 0 20px;
}

.sheet-container .editor-content blockquote::before,
.editor-container .editor-content blockquote::before,
.journal-sheet blockquote::before,
.sheet-container .editor-content blockquote::after,
.editor-container .editor-content blockquote::after,
.journal-sheet blockquote::after {
    content: "";
    position: absolute;
    width: 10px;
    height: 100%;
    background-size: contain;
    background-repeat: no-repeat;
    top: 50%;
    transform: translateY(-50%);
    background-position: center;
}

.community .editor-container .editor-content blockquote::before,
.community .sheet-container .editor-content blockquote::before,
.community .editor-container .editor-content blockquote::after {
    top: 60%;
}

.editor-edit {
    z-index: 1;
}
/* ... */

